--- a/Projetos.html
+++ b/Projetos.html
@@ -18,19 +18,26 @@
                 <ul>
                 <li><a href="index.html">Início</a></li>
                 <li><a href="Projetos.html">Projetos</a></li>
-                <li><a href="">Tutoriais</a></li>
-                <li><a href="">Software</a></li>
+                <li><a href="Tutoriais.html">Tutoriais</a></li>
+                <li><a href="Software.html">Software</a></li>
                 </ul>
                 </nav>
         </header>
 
         <main>
-            <pr>eai essa galera</pr>
+            <div class="corpo">
+                <h2>PROJETOS</h2>
+                <pr>Aqui estão alguns de meus projetos mais recentes em HTML,CSS,JavaScript,Python e outras línguas.</pr>
+                <br><br>
+                <dl>
+                <dt><a href="calculadora.html">CALCULADORA</a></dt>
+                <dd>Literalmente uma calculadora que fiz usando HTML,CSS e JavaScript.</dd>
+                </dl>
+            </div>
         </main>
 
         <footer>
-            <br>
-            <div id="corpo">
+            <div>
                 <pr>Autor: RL o brabo</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
                 <div class="linksfinal">
