--- a/Software.html
+++ b/Software.html
@@ -9,8 +9,10 @@
     </head>
 
     <body>
+
         <header>
-            <h1>INÍCIO</h1>
+            
+            <h1>SOFTWARE</h1>
                 <nav class="linksnav">
                     <ul>
                     <li><a href="index.html">Início</a></li>
@@ -22,19 +24,24 @@
         </header>
 
         <main>
-            <image src="binario.jpg" alt="binary" height="250px" id="imagem">
-            <h2>Sejam bem vindos!</h2>
-            <pr>O objetivo deste site é praticar o meu código HTML, CSS e JavaScript, além de compartilhar alguns tutoriais para quem deseja começar na programação. Na aba de projetos, irei compartilhar alguns dos meus projetos mais recentes.</pr>
-        </main>
+            
+
+            <image src="barbe.JPG" alt="lulucocs" height="250px" id="imagem">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dignissimos assumenda itaque quae neque officiis ut dolorem ipsam a. Non tempora id eius eveniet? Facere doloribus quo quia et voluptatibus.</p>
+            </main>
 
         <footer>
-            <div>
                 <pr>Autor: RL o brabo</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
                 <div class="linksfinal">
                     <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
                 </div>   
             </div>
+
         </footer>
+
     </body>
+
+
+
 </html>
