--- a/calculadora.html
+++ b/calculadora.html
@@ -42,7 +42,7 @@
                     <button onclick="appendToDisplay('/')" class="operador-bot">/</button>
                     <button onclick="appendToDisplay('0')">0</button>
                     <button onclick="appendToDisplay('.')">.</button>
-                    <button onclick="calcular()">=</button>
+                    <button onclick="calcular()" class="operador-bot">=</button>
                     <button onclick="limparDisplay()" class="operador-bot">C</button>
                 </div>
             </div>
