--- a/calculadora.html
+++ b/calculadora.html
@@ -16,7 +16,7 @@
                 <nav class="linksnav">
                 <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="Projetos.html">Projetos</a></li>
+                <li><a href="Portfolio.html">Portfolio</a></li>
                 <li><a href="Tutoriais.html">Tutoriais</a></li>
                 <li><a href="Software.html">Software</a></li>
                 </ul>
@@ -42,7 +42,8 @@
                     <button onclick="appendToDisplay('/')" class="operador-bot">/</button>
                     <button onclick="appendToDisplay('0')">0</button>
                     <button onclick="appendToDisplay('.')">.</button>
-                    <button onclick="calcular()" class="operador-bot">=</button>
+                    <button onclick="calcular()"class="operador-bot">=</button>
+                    <button onclick="appendToDisplay('%')" class="operador-bot">%</button>
                     <button onclick="limparDisplay()" class="operador-bot">C</button>
                 </div>
             </div>
