--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <nav class="linksnav">
                     <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="Projetos.html">Projetos</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="Tutoriais.html">Tutoriais</a></li>
                     <li><a href="Software.html">Software</a></li>
                     </ul>
@@ -22,14 +22,14 @@
         </header>
 
         <main>
-            <image src="binario.jpg" alt="binary" height="250px" id="imagem">
-            <h2>Sejam bem vindos!</h2>
-            <pr>O objetivo deste site é praticar o meu código HTML, CSS e JavaScript, além de compartilhar alguns tutoriais para quem deseja começar na programação. Na aba de projetos, irei compartilhar alguns dos meus projetos mais recentes.</pr>
+            <image src="binario.jpg" alt="binario" height="250px" id="imagem">
+            <h2>Seja bem vindo!</h2>
+            <pr>O objetivo deste site é praticar o meu código HTML, CSS e JavaScript, além de compartilhar alguns tutoriais para quem deseja começar na programação. Na aba de portfolio, irei compartilhar alguns dos meus projetos mais recentes.</pr>
         </main>
 
         <footer>
             <div>
-                <pr>Autor: RL o brabo</pr> <br>
+                <pr>Autor: RL</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
                 <div class="linksfinal">
                     <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
