--- a/Software.html
+++ b/Software.html
@@ -16,7 +16,7 @@
                 <nav class="linksnav">
                     <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="Projetos.html">Projetos</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="Tutoriais.html">Tutoriais</a></li>
                     <li><a href="Software.html">Software</a></li>
                     </ul>
@@ -31,7 +31,7 @@
             </main>
 
         <footer>
-                <pr>Autor: RL o brabo</pr> <br>
+                <pr>Autor: RL</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
                 <div class="linksfinal">
                     <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
