--- a/Tutoriais.html
+++ b/Tutoriais.html
@@ -16,7 +16,7 @@
                 <nav class="linksnav">
                     <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="Projetos.html">Projetos</a></li>
+                    <li><a href="Portfolio.html">Portfolio</a></li>
                     <li><a href="Tutoriais.html">Tutoriais</a></li>
                     <li><a href="Software.html">Software</a></li>
                     </ul>
@@ -27,12 +27,12 @@
             
 
             <image src="barbe.JPG" alt="lulucocs" height="250px" id="imagem">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam dignissimos assumenda itaque quae neque officiis ut dolorem ipsam a. Non tempora id eius eveniet? Facere doloribus quo quia et voluptatibus.</p>
-            </main>
+                
+        </main>
 
         <footer>
             <div>
-                <pr>Autor: RL o brabo</pr> <br>
+                <pr>Autor: RL</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
                 <div class="linksfinal">
                     <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
