--- a/barbecue.html
+++ b/barbecue.html
@@ -8,14 +8,12 @@
 </head>
 <body id="barbecuebody">
     <header>
-        <h1>BARBECUE</h1>
+        <h1>CONDIMENTO</h1>
         
             <nav class="linksnav">
             <ul>
             <li><a href="index.html">Início</a></li>
-            <li><a href="Portfolio.html">Portfolio</a></li>
-            <li><a href="Tutoriais.html">Tutoriais</a></li>
-            <li><a href="Software.html">Software</a></li>
+            <li><a href="Downloads.html">Downloads</a></li>
             </ul>
             </nav>
     </header>
