--- a/calculadora.html
+++ b/calculadora.html
@@ -16,9 +16,7 @@
                 <nav class="linksnav">
                 <ul>
                 <li><a href="index.html">Início</a></li>
-                <li><a href="Portfolio.html">Portfolio</a></li>
-                <li><a href="Tutoriais.html">Tutoriais</a></li>
-                <li><a href="Software.html">Software</a></li>
+                <li><a href="Downloads.html">Downloads</a></li>
                 </ul>
                 </nav>
         </header>
@@ -54,7 +52,7 @@
     
         <footer>
             <div>
-                <pr>Autor: RL o brabo</pr> <br>
+                <pr>Autor: RL</pr> <br>
                 <pr>&copy; Direitos Reservados</pr> <br>
             <div class="linksfinal">
                 <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
