--- a/index.html
+++ b/index.html
@@ -1,40 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" type="image/jpg" href="icone.jpg">
-        <link rel="stylesheet" href="estilo.css">
-        <title>RL</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>RL Portfolio</title>
+    <link rel="icon" type="image/jpg" href="assets/icone.jpg">
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-    <body>
-        <header>
-            <h1>INÍCIO</h1>
-                <nav class="linksnav">
-                    <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="Portfolio.html">Portfolio</a></li>
-                    <li><a href="Tutoriais.html">Tutoriais</a></li>
-                    <li><a href="Software.html">Software</a></li>
-                    </ul>
-                </nav>
-        </header>
+    <header>
+        <h1>RL</h1>
+        <nav>
+            <a href="#" class="active">início</a>
+            <a href="Downloads.html">Downloads</a>
+        </nav>
+    </header>
 
-        <main>
-            <image src="binario.jpg" alt="binario" height="250px" id="imagem">
-            <h2>Seja bem vindo!</h2>
-            <pr>O objetivo deste site é praticar o meu código HTML, CSS e JavaScript, além de compartilhar alguns tutoriais para quem deseja começar na programação. Na aba de portfolio, irei compartilhar alguns dos meus projetos mais recentes.</pr>
-        </main>
+    <section class="home">
+        <img src="assets/mount2.png" class="mount2">
+        <img src="assets/mount1.png" class="mount1">
+        <img src="assets/bush2.png" class="bush2">
 
-        <footer>
-            <div>
-                <pr>Autor: RL</pr> <br>
-                <pr>&copy; Direitos Reservados</pr> <br>
-                <div class="linksfinal">
-                    <a href="mailto:romeulcs1@gmail.com">Entre em contato</a>
-                </div>   
-            </div>
-        </footer>
-    </body>
+        <h1 class="title">Portfolio</h1>
+
+        <img src="assets/bush1.png" class="bush1">
+        <img src="assets/leaf2.png" class="leaf2">
+        <img src="assets/leaf1.png" class="leaf1">
+    </section>
+
+    <section class="about">
+        <h1>Bem Vindo</h1>
+        <br>
+        <p>O objetivo deste site é praticar o meu código HTML, CSS e JavaScript, além de listar alguns softwares que uso.</p>
+    </section>
+
+    <section class="about">
+        <h1>Projetos</h1>
+        <pr>Aqui estão alguns de meus projetos mais recentes em HTML, CSS, JavaScript, Python e outras linguagens de programação.</pr>
+                <br><br>
+                    <image src="assets/png-transparent-logo-html-html5-removebg-preview.png" alt="HTML" class="imagens">
+                    <image src="assets/png-transparent-cascading-style-sheets-logo-css3-html-web-development-world-wide-web-blue-angle-web-design-removebg-preview.png" alt="CSS" class="imagens">
+                    <image src="assets/png-transparent-javascript-logo-angularjs-nodejs-computer-programming-web-development-computer-software-jquery-yellow-removebg-preview.png" alt="JavaScript" class="imagens">
+                <br><br><br>
+                <dl>
+                <dt><a href="calculadora.html">CALCULADORA</a></dt>
+                <dd>Apenas uma calculadora que fiz usando HTML, CSS e JavaScript.</dd>
+                <br>
+                <dt><a href="barbecue.html">CONDIMENTO</a></dt>
+                <dd>Condimento que se passar uma água sai.</dd>
+                </dl>
+    </section>
+    <footer>
+        Autor: RL
+        <br>
+        Contato: romeulcs1@gmail.com
+
+    </footer>
+
+    <script src="index.js"></script>
+
+</body>
 </html>
