--- a/Downloads.html
+++ b/Downloads.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RL Portfolio</title>
-    <link rel="icon" type="image/jpg" href="assets/icone.jpg">
+    <link rel="icon" type="image/jpg" href="icone.jpg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,15 +18,15 @@
     </header>
 
     <section class="home">
-        <img src="assets/mount2.png" class="mount2">
-        <img src="assets/mount1.png" class="mount1">
-        <img src="assets/bush2.png" class="bush2">
+        <img src="mount2.png" class="mount2">
+        <img src="mount1.png" class="mount1">
+        <img src="bush2.png" class="bush2">
 
         <h1 class="title">Downloads</h1>
 
-        <img src="assets/bush1.png" class="bush1">
-        <img src="assets/leaf2.png" class="leaf2">
-        <img src="assets/leaf1.png" class="leaf1">
+        <img src="bush1.png" class="bush1">
+        <img src="leaf2.png" class="leaf2">
+        <img src="leaf1.png" class="leaf1">
     </section>
 
     <section class="about">
