--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <dt><a href="calculadora.html">CALCULADORA</a></dt>
                 <dd>Apenas uma calculadora que fiz usando HTML, CSS e JavaScript.</dd>
                 <br>
+                <dt><a href="conversor.html">CONVERSOR BINÁRIO</a></dt>
+                <dd>Um conversor de números inteiros para binários e vice-versa.</dd>
+                <br>
                 <dt><a href="barbecue.html">CONDIMENTO</a></dt>
                 <dd>Condimento que se passar uma água sai.</dd>
                 </dl>
