--- a/Downloads.html
+++ b/Downloads.html
@@ -32,15 +32,17 @@
     <section class="about">
         <h1>Softwares</h1>
         <br>
-        <p>Alguns softwares que uso</p>
     </section>
     <section class="about">
         <dl>
-            <dt><a href="https://code.visualstudio.com" target="_blank">VSCODE</a></dt>
+            <dt><a href="https://code.visualstudio.com" target="_blank">VSCode</a></dt>
             <dd>O Visual Studio Code (VSCode) é um ambiente de desenvolvimento integrado (IDE) altamente popular e amplamente utilizado, conhecido por sua eficiência, extensibilidade e interface amigável. Desenvolvido pela Microsoft, o VSCode é uma ferramenta poderosa para desenvolvedores de software em uma variedade de linguagens de programação.</dd>
             <br><br>
             <dt><a href="https://developer.apple.com/xcode/" target="_blank">Xcode</a></dt>
             <dd>O Xcode é um ambiente de desenvolvimento integrado (IDE) desenvolvido pela Apple para a criação de aplicativos para seus dispositivos, como iPhone, iPad, Mac, Apple Watch e Apple TV. Ele é uma ferramenta poderosa e abrangente, projetada especificamente para desenvolvedores que trabalham com as tecnologias da Apple, como Swift, Objective-C e SwiftUI.</dd>
+            <br><br>
+            <dt><a href="https://desktop.github.com">GitHub</a></dt>
+            <dd>O GitHub é uma plataforma de desenvolvimento de software baseada na web, amplamente utilizada por desenvolvedores e equipes de todo o mundo para hospedar, revisar e colaborar em projetos de código aberto e privados. Fundado em 2008, o GitHub oferece uma variedade de recursos e ferramentas que facilitam o processo de desenvolvimento de software em equipe. É muito bom pra roubar códigos também.</dd>
         </dl>
     </section>
 
