--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                 <dt><a href="conversor.html">CONVERSOR BINÁRIO</a></dt>
                 <dd>Um conversor de valores binários para decimais e vice-versa.</dd>
                 <br>
+                <dt><a href="tigrinho.html">JOGO DO TIGRINHO</a></dt>
+                <dd>Simplesmente o jogo do tigrinho.</dd>
+                <br>
                 <dt><a href="barbecue.html">CONDIMENTO</a></dt>
                 <dd>Condimento que se passar uma água sai.</dd>
                 </dl>
