--- a/conversor.html
+++ b/conversor.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>CONDIMENTO</h1>
+        <h1>CONVERSOR</h1>
         
             <nav class="linksnav">
             <ul>
