--- a/Downloads.html
+++ b/Downloads.html
@@ -33,7 +33,7 @@
         <h1>Softwares</h1>
         <br>
     </section>
-    <section class="about">
+    <section class="about" id="linksmain">
         <dl>
             <dt><a href="https://code.visualstudio.com" target="_blank">VSCode</a></dt>
             <dd>O Visual Studio Code (VSCode) é um ambiente de desenvolvimento integrado (IDE) altamente popular e amplamente utilizado, conhecido por sua eficiência, extensibilidade e interface amigável. Desenvolvido pela Microsoft, o VSCode é uma ferramenta poderosa para desenvolvedores de software em uma variedade de linguagens de programação.</dd>
